--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -20,7 +22,8 @@
 <body>
     <h1>Disponibilité des places de parking en temps réél</h1>
 <div id="map"></div>
-    <p>Powered by Orléans Open Data and made by <a href="https://github.com/BenoitPrmt" target="_blank">Benoit</a></p>
+    <p>Les données sont actualisées toutes les 5 minutes.</p>
+    <p><i>Powered by Orléans Open Data and made by <a href="https://github.com/BenoitPrmt" target="_blank">Benoit</a></i></p>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
