edited links and add repo link

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <h1>Disponibilité des places de parking en temps réél</h1>
 <div id="map"></div>
     <p>Les données sont actualisées toutes les 5 minutes.</p>
-    <p><i>Powered by Orléans Open Data and made by <a href="https://github.com/BenoitPrmt" target="_blank">Benoit</a></i></p>
+    <p><i>Powered by Orléans Open Data and made by <a href="https://linkedin.com/in/benoit-parmentier" target="_blank">Benoit</a> | This project is
+        <a href="https://github.com/BenoitPrmt/Live-Parking-Orleans" target="_blank">open-source</a></i></p>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
 
-    <script src="js/leaflet-color-markers.js"></script>
     <script src="public/javascript/API/apiCall.js"></script>
 
     <script src="public/javascript/params.js"></script>
