--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         crossorigin=""></script>
 
     <script src="public/javascript/API/apiCall.js"></script>
+    <script src="public/javascript/API/dataCleaner.js"></script>
 
     <script src="public/javascript/params.js"></script>
     <script src="public/javascript/script.js"></script>
