added localStorage for last city and city choose button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </head>
 <body>
     <h1>Disponibilité des places de parking en temps réél</h1>
+    <div class="cities" id="cities">
+        <a id="Orleans">Orléans</a>
+        <a id="Aix-Marseille">Aix-Marseille</a>
+    </div>
 <div id="map"></div>
     <p>Les données sont actualisées toutes les 5 minutes.</p>
     <p><i>Powered by Orléans Open Data and made by <a href="https://linkedin.com/in/benoit-parmentier" target="_blank">Benoit</a> | This project is
