--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     <h1>Disponibilité des places de parking en temps réél</h1>
     <div class="cities" id="cities">
-        <a id="Orleans">Orléans</a>
-        <a id="Aix-Marseille">Aix-Marseille</a>
+        <a class="button" id="Orleans">Orléans</a>
+        <a class="button" id="Aix-Marseille">Aix-Marseille</a>
     </div>
 <div id="map"></div>
     <p>Les données sont actualisées toutes les 5 minutes.</p>
