--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         <a class="button" id="Aix-Marseille">Aix-Marseille</a>
     </div>
 <div id="map"></div>
-    <p>Les données sont actualisées toutes les 5 minutes.</p>
-    <p><i>Powered by Orléans Open Data and made by <a href="https://linkedin.com/in/benoit-parmentier" target="_blank">Benoit</a> | This project is
-        <a href="https://github.com/BenoitPrmt/Live-Parking-Orleans" target="_blank">open-source</a></i></p>
-
+    <footer>
+        <p>Les données sont actualisées toutes les 5 minutes.</p>
+        <p><i>Made by <a href="https://linkedin.com/in/benoit-parmentier" target="_blank">Benoit</a> | This project is
+            <a href="https://github.com/BenoitPrmt/Live-Parking-Orleans" target="_blank">open-source</a></i></p>
+    </footer>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
