--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Parking en direct</title>
 </head>
 <body>
-    <h1>Disponibilité des places de parking en temps réél</h1>
+    <h1 class="center">Disponibilité des places de parking en temps réél</h1>
     <div class="cities" id="cities">
         <a class="button" id="Orleans">Orléans</a>
         <a class="button" id="Aix-Marseille">Aix-Marseille</a>
