edited repo link in index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <footer>
         <p>Les données sont actualisées toutes les 5 minutes.</p>
         <p><i>Made by <a href="https://linkedin.com/in/benoit-parmentier" target="_blank">Benoit</a> | This project is
-            <a href="https://github.com/BenoitPrmt/Live-Parking-Orleans" target="_blank">open-source</a></i></p>
+            <a href="https://github.com/BenoitPrmt/viteuneplace.fr" target="_blank">open-source</a></i></p>
     </footer>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
